--- a/ENLITE study/jeeadvanced.html
+++ b/ENLITE study/jeeadvanced.html
@@ -25,7 +25,7 @@
             <ul class="navbar-links">
               <li><a href="index.html">HOME</a></li>
               <li><a href="https://drive.google.com/file/d/1knQEr2g5Z_KAzaK6v4VkPqTMiyN_kRVk/view?usp=share_link">ABOUT</a></li>
-              <li><a href="#">MORE Pdfs</a></li>
+              <li><a href="index.html">MORE Pdfs</a></li>
               <li><a href="#">contact me</a></li>
             </ul>
         </nav>
